<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


<TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/txtUserName"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/nombre"
        android:inputType="text" />

    <Button android:id="@+id/btnEntrar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" />

    <Button android:id="@+id/btnListar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/listar"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" />


    <Button android:id="@+id/btnAgregar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/agregar"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/result_list_view"
        />
</LinearLayout>
